[tool.poetry]
name = "inflammation"
version = "1.0.1"
description = "Analyse patient inflammation data"
authors = ["Jorrit Bakker <j.y.bakker@uu.nl>"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.2"
numpy = "^2.1.2"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
